--- a/Encounter/css/style.css
+++ b/Encounter/css/style.css
@@ -140,11 +140,15 @@ nav ul li a:hover {
 	background-color: white;
 	margin: 20px 0 10px 10px;
 	padding: 10px;
-	
 	border-radius: 10px;
 	float: left;
 }
-
+.article3 {
+	min-height: 300px;
+}
+.section1 {
+	min-height: 300px;
+}
 dt {
 	text-transform: uppercase;
 }
