--- a/Encounter/views/home.html
+++ b/Encounter/views/home.html
@@ -1,43 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-	<meta charset="utf-8">
-	<title>
-		Encounter
-	</title>
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	
-	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <script src="js/vendor/angular.min.js"></script>
-	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
-</head>
-
-<body ng-app="myEncounter">
-	<header>
-		<div class="container">
-			<div class="logo">
-				<a href="index.html">Encounter</a>
-			</div> <!-- end of logo -->
-			<p>
-				(a division of The Bridge Church)
-			</p>
-			<nav>
-				<ul>
-					<li><a href="index.html">About us</a></li>
-					<li><a href="ongoing.html">ongoing events</a></li>
-					<li><a href="special.html">social events</a></li>
-					<li><a href="photo.html">photo gallery</a></li>
-					<li><a href="contact.html">contact us</a></li>
-				</ul>
-			</nav>
-		</div> <!-- end of container -->
-	</header>
-	<div class="container">
-		<main ng-controller="MainController">
-			<div ng-view></div>
-			<div class="hero"> 
+<div class="hero"> 
 				<!-- image of KCM and I in css -->
 			</div> <!-- this closes the hero -->
 			<h1>
@@ -118,21 +79,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We have finished the Tozer book. This week we have an introduction to 1 Corinthians. It is the ladies' night to bring food.
+						This week we are studying chapter 9 in the Tozer book. We are having a potluck.
 					</p>
 				</article>
 			</div> <!-- end class right -->
-		</main>
-	</div> <!-- end of container -->
-		
-	<footer>
-		<div class="container">
-			<p>
-				&copy 2015 Jonathan Acomb
-			</p>
-		</div> <!-- end of container -->
-	</footer>
-
-	
-</body>
-</html>
